<resources>
    <string name="app_name">Easy Menu</string>

    <string name="button_ok">Login</string>

    <!-- Strings da tela de pedidos -->
    <string name="produtounico">Add single prince only product</string>
    <string name="produtotamamho">Add multiple prince product</string>
    <string name="order">Order</string>
    <string name="produtcs">Products : </string>
    <string name="total">Total : </string>

    <!-- Strings da tela de login -->
    <string name="title_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="social_login">Social Login</string>

    <!-- Strings da tela de login social -->
    <string name="title_social">Social Login</string>
    <string name="easy_menu_logo">Easy Menu Logo</string>
    <string name="nome_est">Estabelecimento</string>
    <string name="endereco">Endereço</string>
    <string name="aberto">Aberto</string>
    <string name="title_activity_sel_est">Selecionar estabelecimento</string>
    <string name="title_activity_sel_produto">Selecionar Produto</string>
    <string name="produto">Produto</string>
    <string name="title_activity_pedidos">Pedidos</string>
</resources>
